# BrainSimulation

./: .gitignore  CLAUDE.md  README.md
CA1_full_scale/: .gitignore  CLAUDE.md  DEEP_ANALYSIS_REPORT.md  INSTALL.md  README.md  RECOVERY_PLAN.md  env.sh  manifest.json  pyproject.toml
CA1_full_scale/_wsl_build/: README.md  RESULTS_A6000.md  step1_env.sh  step2_cpu_nest.sh  step3a_prepare_nestgpu.sh  step3b_build_nestgpu.sh  step3c_smoke_nestgpu.sh  step4a_cli_smoke.sh  step4b_fullscale_demo.sh  step4d_wait_validate.sh  step4e_validate.sh  sync.sh
CA1_full_scale/bezaire_modeldb/: README.txt  fastconn.mod  mynetstim.mod  repeatconn.mod  sgate.mod
CA1_full_scale/configs/: full_scale.yaml  full_scale_3dtopo.yaml  full_scale_clamp_all_table5.yaml  full_scale_pertarget.yaml  full_scale_somaexc.yaml  full_scale_theta_stack.yaml  phase1_ngf5x.yaml  phase1_ngf5x_gababoff.yaml  scaled_1_50.yaml  smoke_180.yaml  smoke_3dtopo_vs_uniform_3d.yaml  smoke_3dtopo_vs_uniform_uniform.yaml  smoke_base_scaled.yaml  smoke_somaexc_scaled.yaml
CA1_full_scale/docs/: INSTALL_NESTGPU.md  architecture.md  cck_sca_diagnosis_result.md  clamp_replay_result.md  contact_alloc_4arm.md  depolblock_expressivity.md  downscaling_strategy.md  fullscale_theta_stack_gates.txt  gaba_into_cck_audit.md  gaba_transfer_audit.md  gate1b_status.md  god_tibo_imagen_ppt.md  model_equations.md  modeldb_dataset_notes.md  modeldb_notes.md  nest-gpu-modifications.md  network_analysis.md  network_diagnosis_plan.md  output_format.md  pv_morphology_design.md  pv_multicompartment_design.md  safe20_synaptic_port_model_ppt.md  (+5 more)
(+397 files in other folders)
