[project]
name = "ca1"
version = "0.2.0"
description = "Full-scale CA1 spiking-network model (BSB build + swappable NEST/NEST-GPU backends), validated against Bezaire et al. (2016) intrinsic theta."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.15.3",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "h5py>=3.11",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "bsb[arbor,nest,neuron]>=6.0.6",
]

[project.optional-dependencies]
# Single-cell fitting (morphology -> point-neuron) is heavy and optional.
fit = ["efel>=5.7", "bluepyopt>=1.14"]
dev = ["pytest>=8.4.2", "pytest-xdist>=3.8.0", "pytest-timeout>=2.4.0", "ruff>=0.6"]

[project.scripts]
ca1 = "ca1.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ca1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
